--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
   <%= render "shared/navabar" %>
   <%= yield %>
   <%= render "shared/footer" %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= yield(:js) %>
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
 </body>
 </html>
