homepage static done, redirection publish ad to discuss when not logged in, partials to do on products

--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -1,1 +1,15 @@
 // Your footer style
+#footer{
+  padding: 1% 10%;
+  background-color: $gray-darker;
+  color: white;
+
+  .fa{
+    color: white;
+    font-size: 24px;
+    &:hover{
+      color: $red;
+      text-decoration: none
+    }
+  }
+}
