--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -31,3 +31,13 @@
   background: $purple;
   color: white;
 }
+
+.bg-white {
+  background: white;
+  color: black;
+}
+
+.bg-gray-lighter {
+  background: $gray-lighter;
+  color: black;
+}
