--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <%= render "shared/footer" %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= yield(:js) %>
-  ## TODO  Change with refacto rail course
+ <!--  ## TODO  Change with refacto rail course -->
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 </body>
