--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -25,7 +25,7 @@ $base-height: 1.4;
  * Colors
  * ------------------------------------- */
 // Scheme
-$red: #EE5F5B;
+$red: #FF5A5F; //origine => #EE5F5B
 $blue: #469AE0;
 $yellow: #FDB631;
 $orange: #E67E22;
