--- a/app/views/home/_product.html.erb
+++ b/app/views/home/_product.html.erb
@@ -1,5 +1,7 @@
 
-  <div class=" col-sm-4">
-    <%= image_tag product.picture.url(:medium) %>
-    <h4><%= product.title %></h4>
-  </div>
+  <%= link_to(product) do %>
+    <div class=" col-sm-4">
+      <%= image_tag product.picture.url(:medium) %>
+      <h4><%= product.title %></h4>
+    </div>
+  <% end %>
