Commented picture issue

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container padded">
 
   <%# if @product.picture %>
-    <%#= image_tag @post.picture.url(:medium) %>
+    <%#= image_tag @product.picture.url(:medium) %>
   <%# end %>
   <% if @booking.errors %>
     <%= @booking.errors.messages %>
