--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -41,7 +41,7 @@
     <div class="col-xs-12 band">
 
       <% @products.each do |p| %>
-          <%= render "_product", product: p %>
+          <%= render "product", product: p %>
       <% end %>
    <!-- Statique à supprimer - MAX -->
    <!--    <div class=" col-sm-4">
