fixing issues after mergin - most of the website (without account context) working

--- a/app/views/home/_product.html.erb
+++ b/app/views/home/_product.html.erb
@@ -1,7 +1,9 @@
 
   <%= link_to(product) do %>
     <div class=" col-sm-4">
-      <%#= image_tag product.picture.url(:medium) %>
+      <% if product.picture %>
+        <%= image_tag product.picture.url(:medium) %>
+      <% end %>
       <h4><%= product.title %></h4>
     </div>
   <% end %>
