--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -34,10 +34,24 @@
 
 .bg-white {
   background: white;
-  color: black;
+  padding-top: 3px;
+  padding-left: 5px;
+  padding-bottom: 3px;
+  p {
+    margin-bottom: 0px;
+  }
 }
 
 .bg-gray-lighter {
   background: $gray-lighter;
   color: black;
+}
+
+.card {
+  text-align: left;
+  height: 200px;
+  width: 300px;
+  border-radius: 5px;
+  margin-bottom: 20px
+  ;
 }
