--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,19 +1,32 @@
 <h1>index products</h1>
 
 
+<div class="padded-container">
 
- <div class="container">
+  <div class="container">
 
    <div class="row">
 
     <% @products.each do |product| %>
 
-     <div class="col-xs-12 col-sm-3 col-sm-offset-3">
+     <div class="col-xs-6 col-sm-4">
 
-      <div class="announce">
-        <p><%= link_to product.title, product_path(product) %></p>
-        <p>$<%= product.night_price %></p>
-        <%= image_tag product.picture.url(:medium) %>
+      <div class="card">
+
+
+        <div id="img-card">
+          <%= image_tag product.picture.url(:medium) %>
+        </div>
+
+       <div class="price-ticket">
+         <span><%= product.night_price %></span>
+         <sup>$</sup>
+       </div>
+
+       <div class="bg-white">
+         <p><%= link_to product.title, product_path(product) %></p>
+       </div>
+
       </div>
 
      </div>
@@ -22,7 +35,9 @@
 
    </div>
 
- </div>
+  </div>
 
- <%= link_to 'publish an add', new_product_path %>
+</div>
+
+
 
