--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -23,7 +23,7 @@
          <sup>$</sup>
        </div>
 
-       <div class="bg-white">
+       <div id="title-box">
          <p><%= link_to product.title, product_path(product) %></p>
        </div>
 
