--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,42 +1,22 @@
 <h1>index products</h1>
 
-
-<div class="padded-container">
-
-  <div class="container">
-
-   <div class="row">
-
+<div class="container padded">
+  <div class="row">
     <% @products.each do |product| %>
-
-     <div class="col-xs-6 col-sm-4">
-
-      <div class="card">
-
-
-        <div id="img-card">
-          <%= image_tag product.picture.url(:medium) %>
+      <div class="col-xs-6 col-sm-4">
+        <div class="card">
+          <%= image_tag product.picture.url(:medium), class: "card-img" %>
+          <div class="card-label">
+            <span><%= product.night_price %></span>
+            <sup>$</sup>
+          </div>
+          <div class="card-content">
+            <p><%= link_to product.title, product_path(product) %></p>
+          </div>
         </div>
-
-       <div class="price-ticket">
-         <span><%= product.night_price %></span>
-         <sup>$</sup>
-       </div>
-
-       <div id="title-box">
-         <p><%= link_to product.title, product_path(product) %></p>
-       </div>
-
       </div>
-
-     </div>
-
-     <% end %>
-
-   </div>
-
+   <% end %>
   </div>
-
 </div>
 
 
