--- a/app/assets/stylesheets/layout/_base.scss
+++ b/app/assets/stylesheets/layout/_base.scss
@@ -4,3 +4,7 @@
  * Before writing in this file, look if there is not
  * already a Bootstrap SCSS variable that does the same job
  * ------------------------------------- */
+
+ .bellow-navbar {
+   margin-top: $navbar-height + $navbar-vertical-padding * 2 ;
+ }
