--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,23 +1,25 @@
 <h1>index products</h1>
-
-<div class="container padded">
-  <div class="row">
-    <% @products.each do |product| %>
-      <div class="col-xs-6 col-sm-4">
-        <div class="card">
-          <%= image_tag product.picture.url(:medium), class: "card-img" %>
-          <div class="card-label">
-            <span><%= product.night_price %></span>
-            <sup>$</sup>
-          </div>
-          <div class="card-content">
-            <p><%= link_to product.title, product_path(product) %></p>
+<div class="bolow-navbar">
+  <div class="container padded">
+    <div class="row">
+      <% @products.each do |product| %>
+        <div class="col-xs-6 col-sm-4">
+          <div class="card">
+            <%= image_tag product.picture.url(:medium), class: "card-img" %>
+            <div class="card-label">
+              <span><%= product.night_price %></span>
+              <sup>$</sup>
+            </div>
+            <div class="card-content">
+              <p><%= link_to product.title, product_path(product) %></p>
+            </div>
           </div>
         </div>
-      </div>
-   <% end %>
+     <% end %>
+    </div>
   </div>
 </div>
+
 
 
 
