--- a/app/views/account/incoming_bookings/index.html.erb
+++ b/app/views/account/incoming_bookings/index.html.erb
@@ -40,17 +40,17 @@
       </div>
 
       <!-- Need to discuss how to code accept / reject -->
-      <%#= form_for(booking) do | f | %>
-          <!-- <div class="col-xs-2"> -->
-            <%#= f.hidden_field :status, value: true %>
-            <%#= f.submit "Accept", class:'btn btn-success btn-mini' %>
-          <!-- </div> -->
+      <%= form_for(booking) do | f | %>
+          <div class="col-xs-2">
+            <%= f.hidden_field :status, value: true %>
+            <%= f.submit "Accept", class:'btn btn-success btn-mini' %>
+          </div>
 
-          <!-- <div class="col-xs-2"> -->
-            <%#= f.hidden_field :status, value: false %>
-            <%#= f.submit "Reject", class:'btn btn-danger btn-mini' %>
-          <!-- </div> -->
-      <%# end %>
+          <div class="col-xs-2">
+            <%= f.hidden_field :status, value: false %>
+            <%= f.submit "Reject", class:'btn btn-danger btn-mini' %>
+          </div>
+      <% end %>
 
     </div>
   <% end %>
