slight correction after mergin

--- a/app/assets/stylesheets/layout/_base.scss
+++ b/app/assets/stylesheets/layout/_base.scss
@@ -6,5 +6,5 @@
  * ------------------------------------- */
 
  .bellow-navbar {
-   margin-top: $navbar-height + $navbar-vertical-padding * 2 ;
+   margin-top: $navbar-height + 10 * 2 ;
  }
