--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -15,7 +15,7 @@
   &-label {
     position: absolute;
     left: 0;
-    bottom: 50px;
+    top: 200px;
     color: white;
     background-color: rgba(60,63,64,0.9);
     padding: 5px;
