--- a/app/views/account/products/index.html.erb
+++ b/app/views/account/products/index.html.erb
@@ -1,6 +1,10 @@
-<h1>index products</h1>
-<div class="bolow-navbar">
-  <div class="container padded">
+
+<div class="bellow-navbar">
+  <div class="text-center">
+    <h2>My places on AirBnB</h2>
+  </div>
+
+  <div class="container">
     <div class="row">
       <% @products.each do |product| %>
         <div class="col-xs-6 col-sm-4">
@@ -11,9 +15,16 @@
               <sup>$</sup>
             </div>
             <div class="card-content">
-              <p><%= link_to product.title, product_path(product) %></p>
+              <p><%= product.title %></p>
+            </div>
+            <div class="card-content">
+              <p><%=product.description %></p>
             </div>
           </div>
+
+          <p class="text-center">
+            <%= link_to "edit", edit_account_product_path(product) %>
+          </p>
         </div>
      <% end %>
     </div>
