--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,18 +1,9 @@
-.full-img img{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 100px;
-  margin-bottom: 100px;
+$gray-presentation: #E2E1E2;
+
+#show{
+  margin-top: 140px;
 }
 
-.title-big {
-  text-align: center;
-}
-
-.call-to-action {
-padding: 20px;
-}
 
 #full-description {
 margin-top: 50px;
@@ -22,4 +13,23 @@ margin-right: auto;
 width: 60%;
 border-radius: $border-radius-base;
 padding: 15px;
+}
+
+.presentation {
+  position: relative;
+  border-radius: $border-radius-base;
+  border: 1px solid $gray-presentation;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 70px;
+  margin-bottom: 50px;
+    &-header {
+    padding-top: 10px;
+      .presentation-button {
+      float: right;
+      }
+    }
+    .presentation-body {
+      padding-top: 40px;
+    }
 }
