--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -11,6 +11,9 @@
     padding-top: 11px;
     padding-left: 5px;
     height: 50px;
+      & img {
+        border-radius: 20px;
+      }
   }
   &-label {
     position: absolute;
