--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,16 +6,7 @@
       <% @products.each do |product| %>
       <%= link_to(product) do %>
         <div class="col-xs-6 col-sm-4">
-          <div class="card">
-            <%= image_tag product.picture.url(:medium), class: "card-img" %>
-            <div class="card-label">
-              <span><%= product.night_price %></span>
-              <sup>$</sup>
-            </div>
-            <div class="card-content">
-              <p><%= link_to product.title, product_path(product) %></p>
-            </div>
-          </div>
+          <%= render "card", product: product, footer: true %>
         </div>
      <% end %>
      <% end %>
