--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -7,12 +7,19 @@
     width: 100%;
   }
   &-content{
+    position: relative;
     background: white;
     padding-top: 11px;
     padding-left: 5px;
     height: 50px;
       & img {
         border-radius: 20px;
+        position: absolute;
+        left: 5px;
+        bottom: 5px;
+      }
+      & p {
+        text-align: center;
       }
   }
   &-label {
