--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -25,11 +25,12 @@
   &-label {
     position: absolute;
     left: 0;
-    top: 200px;
+    bottom: 50px;
     color: white;
     background-color: rgba(60,63,64,0.9);
     padding: 5px;
     padding-left: 10px;
     padding-right: 20px;
+    z-index: 2;
   }
 }
