adding unsaved changes + mailer enhenced

--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,5 +1,6 @@
-<h1>UserMailer#welcome</h1>
+<h1>Welcom to Airbnb</h1>
 
 <p>
-  Welcome to you <%= @user %>!
+  Thank you for registering into our website !
+  You can check <a href="https://airbnb-alm.herokuapp.com/products">here</a> some awesome appartement to visit
 </p>
