--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= yield(:title) || "Loul's Cocktail" %></title>
-  <% favicon_link_tag %>
+  <title><%= yield(:title) || "AirBnB" %></title>
+  favicon_link_tag
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
