--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,14 +7,14 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
   <%= render "shared/navbar" %>
   <%= yield %>
   <%= render "shared/footer" %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application' => true %>
   <%= yield(:js) %>
  <!--  ## TODO  Change with refacto rail course -->
   <p class="notice"><%= notice %></p>
