changing the column name city into address

--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -4,7 +4,7 @@
       <%= f.error_notification %>
 
       <%= f.input :title %>
-      <%= f.input :city %>
+      <%= f.input :address %>
       <%= f.input :night_price %>
       <%= f.input :description %>
       <%= f.input :online, as: :radio_buttons %>
