--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -42,6 +42,10 @@
       </div>
 
 
+      <div class="col-xs-2">
+      <%= link_to "Edit", edit_booking_path(booking) %>
+      </div>
+
 
 
     </div>
