--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -41,3 +41,19 @@
   background: $gray-lighter;
   color: black;
 }
+
+.listing {
+  padding: 5px 0px;
+  margin-top: 3px;
+  &:hover{
+    background-color: white;
+  }
+  .btn{
+    width:60%;
+  }
+}
+
+.listing-title {
+  font-weight:600;
+  color: $blue
+}
