--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -28,12 +28,6 @@
 
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-          <li>
-            <!-- create a contact url - TBU -->
-            <%= link_to "#" do %>
-              <i class="fa fa-envelope-o"></i> Messages
-            <% end %>
-          </li>
           <li class="dropdown">
             <%= link_to "#", {class: "dropdown-toggle", "data-toggle" => "dropdown", "role" => "button", "aria-expanded" => "false"} do %>
               <%= image_tag current_user.picture, class: "img-avatar" %>
@@ -41,13 +35,18 @@
             <% end %>
             <ul class="dropdown-menu" role="menu">
               <li>
-                <%= link_to "#" do %>
-                  <i class="fa fa-user"></i> Profile
+                <%= link_to bookings_path do %>
+                  <i class="fa fa-bed"></i> My Bookings
                 <% end %>
               </li>
               <li>
-                <%= link_to "#" do %>
-                  <i class="fa fa-home"></i> Flats
+                <%= link_to account_products_path do %>
+                  <i class="fa fa-home"></i> My Flats
+                <% end %>
+              </li>
+               <li>
+                <%= link_to account_bookings_path do %>
+                  <i class="fa fa-child"></i> Incoming requests
                 <% end %>
               </li>
               <li>
