adding mailer for booking request accepted and rejected

--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -2,5 +2,5 @@
 
 <p>
   Thank you for registering into our website !
-  You can check <a href="https://airbnb-alm.herokuapp.com/products">here</a> some awesome appartement to visit
+  You can check <%= link_to "here", products_path %> to some awesome appartement to book
 </p>
