--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,7 +3,7 @@
   position: relative;
   color:white;
   width: 100%;
-  height: 450px;
+  height: 590px;
   overflow: hidden;
   text-align:center;
 
@@ -27,4 +27,8 @@
 
  .band {
   padding: 100px;
+ }
+
+ .search {
+  margin-top: 100px;
  }
