--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,15 +7,18 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
   <%= render "shared/navbar" %>
   <%= yield %>
   <%= render "shared/footer" %>
+
+  <%= yield(:before_js) %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= yield(:js) %>
+  <%= yield(:after_js) %>
+
  <!--  ## TODO  Change with refacto rail course -->
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
