--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,9 @@
 <h1>index products</h1>
 <div class="bolow-navbar">
+
+  <div class="col-md-12">
+      <div id="map" style='width: 100%; height: 600px;'></div>
+    </div>
   <div class="container padded">
     <div class="row">
 
@@ -14,6 +18,19 @@
   </div>
 </div>
 
+
+ <% content_for(:after_js) do %>
+    <script type="text/javascript">
+      $(document).on('ready', function() {
+        handler = Gmaps.build('Google');
+        handler.buildMap({ internal: { id: 'map' } }, function(){
+          markers = handler.addMarkers(<%= raw @hash.to_json %>);
+          handler.bounds.extendWith(markers);
+          handler.fitMapToBounds();
+        });
+      })
+    </script>
+  <% end %>
 
 
 
