--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -33,4 +33,10 @@
     padding-right: 20px;
     z-index: 2;
   }
+  &-icon {
+    text-align: right;
+    position: absolute;
+    top: 15px;
+    right: 5px;
+  }
 }
