--- a/app/views/account/products/index.html.erb
+++ b/app/views/account/products/index.html.erb
@@ -6,26 +6,14 @@
 
   <div class="container">
     <div class="row">
-      <% @products.each do |product| %>
-        <div class="col-xs-6 col-sm-4">
-          <div class="card">
-            <%= image_tag product.picture.url(:medium), class: "card-img" %>
-            <div class="card-label">
-              <span><%= product.night_price %></span>
-              <sup>$</sup>
-            </div>
-            <div class="card-content">
-              <p><%= product.title %></p>
-            </div>
-            <div class="card-content">
-              <p><%=product.description %></p>
-            </div>
-          </div>
-          <p class="text-center">
-            <%= link_to "edit", edit_account_product_path(product) %>
-          </p>
+       <% @products.each do |product| %>
+       <%= link_to(product) do %>
+         <div class="col-xs-6 col-sm-4">
+           <%= render "products/card", product: product, footer: nil %>
+         </div>
+      <% end %>
+      <% end %>
         </div>
-     <% end %>
     </div>
   </div>
 </div>
