--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -34,7 +34,7 @@
       </div>
 
       <div class="col-xs-2">
-        <%= booking.check_out %>
+        <%= booking.checkout %>
       </div>
 
       <div class="col-xs-2">
