--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -9,15 +9,19 @@
 
       <h2>When do you want to book ?</h2>
       <%= simple_form_for([@product, @booking]) do |f| %>
-      <%= f.error_notification %>
-
-        <%= f.input :check_in %>
-        <%= f.input :night %>
+        <%= f.error_notification %>
+        <div class="input-daterange" id="datepicker">
+          <%= f.text_field :check_in, :class => 'input-small', :id => 'booking_check_in'%>
+          <span class="add-on">to</span>
+           <%= f.text_field :checkout, :class => 'input-small', :id => 'booking_check_out'%>
+        </div>
         <%= f.input :message %>
-
-
         <%= f.button :submit, class: "button btn btn-primary" %>
       <% end %>
     </div>
   </div>
 </div>
+
+
+
+
