map integrated without css

--- a/app/views/products/_map_box.html.erb
+++ b/app/views/products/_map_box.html.erb
@@ -1,5 +1,5 @@
 <div class="map_box">
-  <h3><%= flat.name %></h3>
-  <p><%= flat.address %></p>
-  <%= link_to "See", flat, class: "btn btn-warning" %>
+  <h3><%= product.title %></h3>
+  <p><%= product.address %></p>
+  <%= link_to "See", @product, class: "btn btn-warning" %>
 </div>
