--- a/app/views/user_mailer/booking_sent.html.erb
+++ b/app/views/user_mailer/booking_sent.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   Thank you for booking through AirBnB
-  You will receive an email when the owner respond to your request. In the mean time you can check all our booking <%= link_to "here", bookings_path %>.
+  You will receive an email when the owner respond to your request. In the mean time you can check all our booking <%= link_to "here", bookings_url %>.
   <br>
   </p>
   <p>Jean Michelle, </p>
