--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -2,5 +2,5 @@
 
 <p>
   Thank you for registering into our website !
-  You can check <%= link_to "here", products_path %> to some awesome appartement to book
+  You can check <%= link_to "here", products_url %> to some awesome appartement to book
 </p>
