--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,12 @@
 
 
   <%= yield(:before_js) %>
+    <!-- Include Google Maps JS API -->
+  <%= javascript_include_tag "https://google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js" %>
+  <script type="text/javascript"
+    src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBF8Fjnx-vLo9xQoxULB1oAE9O4sqYj8hQ">
+  </script>
+
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= yield(:after_js) %>
 
