redesign listing bookings

--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -42,18 +42,18 @@
   color: black;
 }
 
-.listing {
-  padding: 5px 0px;
-  margin-top: 3px;
-  &:hover{
-    background-color: white;
-  }
-  .btn{
-    width:60%;
-  }
-}
+// .listing {
+//   padding: 5px 0px;
+//   margin-top: 3px;
+//   &:hover{
+//     background-color: white;
+//   }
+//   .btn{
+//     width:60%;
+//   }
+// }
 
-.listing-title {
-  font-weight:600;
-  color: $blue
-}
+// .listing-title {
+//   font-weight:600;
+//   color: $blue
+// }
