--- a/app/views/account/bookings/index.html.erb
+++ b/app/views/account/bookings/index.html.erb
@@ -2,75 +2,77 @@
 
 <div class="container text-center padded">
 <h2 class="title">Your places booking requests</h2>
-  <h4>
-    <div class="row listing-title">
-      <div class="col-xs-4">
-        Your places
-      </div>
-
-      <div class="col-xs-2">
-        Check-in
-      </div>
-
-      <div class="col-xs-2">
-        Check-Out
-      </div>
-
-      <!-- <div class="col-xs-2">
-        Current status
-      </div>
-
-      <div class="col-xs-1">
-        Accept
-      </div>
-
-      <div class="col-xs-1">
-        Reject
-      </div> -->
-    </div>
-  </h4>
-
-  <% @bookings.each do | booking | %>
-    <div class="row listing">
-      <div class="col-xs-4">
-        <%= booking.product.title %>
-      </div>
-
-      <div class="col-xs-2">
-        <%= booking.check_in %>
-      </div>
-
-      <div class="col-xs-2">
-        <%= booking.checkout %>
-      </div>
-<!--
-      <div class="col-xs-2">
-        <%#= booking.status %>
-      </div> -->
-
-      <%= simple_form_for(booking, url: account_booking_path(booking)) do | f | %>
-        <div class="col-xs-2">
-          <% if booking.status %>
-            <input type="hidden" value="true" name="booking[status]">
-            <%= f.submit "Accepted", class: 'btn btn-primary btn-mini button selected' %>
-          <% else %>
-            <input type="hidden" value="true" name="booking[status]">
-            <%= f.submit "Accept", class: 'btn btn-primary btn-mini button' %>
-          <% end %>
+  <div class="listing">
+    <h4>
+      <div class="col-xs-12 ls-title">
+        <div class="col-xs-4">
+          Your places
         </div>
-      <% end %>
 
-      <%= simple_form_for(booking, url: account_booking_path(booking)) do | f | %>
         <div class="col-xs-2">
-        <% if booking.status == false %>
-          <input type="hidden" value="false" name="booking[status]">
-          <%= f.submit "Rejected", class: 'btn btn-primary btn-mini button selected' %>
-        <% else %>
-          <input type="hidden" value="false" name="booking[status]">
-          <%= f.submit "Reject", class: 'btn btn-primary btn-mini button' %>
+          Check-in
+        </div>
+
+        <div class="col-xs-2">
+          Check-Out
+        </div>
+
+        <!-- <div class="col-xs-2">
+          Current status
+        </div>
+
+        <div class="col-xs-1">
+          Accept
+        </div>
+
+        <div class="col-xs-1">
+          Reject
+        </div> -->
+      </div>
+    </h4>
+
+    <% @bookings.each do | booking | %>
+      <div class="col-xs-12 ls-row">
+        <div class="col-xs-4 ">
+          <%= booking.product.title %>
+        </div>
+
+        <div class="col-xs-2">
+          <%= booking.check_in %>
+        </div>
+
+        <div class="col-xs-2">
+          <%= booking.checkout %>
+        </div>
+
+        <div class="col-xs-2">
+          <%= booking.status %>
+        </div>
+
+        <%= simple_form_for(booking, url: account_booking_path(booking)) do | f | %>
+          <div class="col-xs-1">
+            <% if booking.status %>
+              <input type="hidden" value="true" name="booking[status]">
+              <%= f.submit "Accepted", class: 'btn listing-btn selected' %>
+            <% else %>
+              <input type="hidden" value="true" name="booking[status]">
+              <%= f.submit "Accept", class: 'btn listing-btn' %>
+            <% end %>
+          </div>
         <% end %>
-        </div>
-      <% end %>
-    </div>
-  <% end %>
+
+        <%= simple_form_for(booking, url: account_booking_path(booking)) do | f | %>
+          <div class="col-xs-1">
+          <% if booking.status == false %>
+            <input type="hidden" value="false" name="booking[status]">
+            <%= f.submit "Rejected", class: 'btn listing-btn selected' %>
+          <% else %>
+            <input type="hidden" value="false" name="booking[status]">
+            <%= f.submit "Reject", class: 'btn listing-btn' %>
+          <% end %>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
 </div>
