--- a/app/views/account/bookings/index.html.erb
+++ b/app/views/account/bookings/index.html.erb
@@ -1,33 +1,31 @@
 <div class="container text-center padded">
-<h2 class="title">Your places booking requests</h2>
-  <div class="listing">
-    <h4>
-      <div class="col-xs-12 ls-title">
-        <div class="col-xs-4">
-          <div class='first-col'>Your places</div>
-        </div>
-
-        <div class="col-xs-2">
-          <div>Check-in</div>
-        </div>
-
-        <div class="col-xs-2">
-          <div>Check-Out</div>
-        </div>
-
-        <div class="col-xs-2">
-          <div>Customer</div>
-        </div>
-
-        <!-- <div class="col-xs-1">
-          <div>Accept</div>
-        </div>
-
-        <div class="col-xs-1">
-          <div>Reject</div>
-        </div> -->
+<h2 class="title">Bookings on your places</h2><br>
+  <div class="listing col-xs-12">
+    <div class="col-xs-12 ls-title">
+      <div class="col-xs-4">
+        <div class='first-col'>Your places</div>
       </div>
-    </h4>
+
+      <div class="col-xs-2">
+        <div>Check-in</div>
+      </div>
+
+      <div class="col-xs-2">
+        <div>Check-Out</div>
+      </div>
+
+      <div class="col-xs-2">
+        <div>Customer</div>
+      </div>
+
+      <!-- <div class="col-xs-1">
+        <div>Accept</div>
+      </div>
+
+      <div class="col-xs-1">
+        <div>Reject</div>
+      </div> -->
+    </div>
 
     <% @bookings.each do | booking | %>
       <div class="col-xs-12 ls-row">
