--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container text-center padded">
-<h2 class="title">Your booking</h2>
-  <div class="listing">
+<h2 class="title">Your bookings</h2><br>
+  <div class="listing  col-xs-12">
     <div class="col-xs-12 ls-title">
-      <h4><div class="col-xs-4">
+      <div class="col-xs-4">
         <div class='first-col'>Your places</div>
       </div>
 
@@ -21,7 +21,7 @@
       <!-- <div class="col-xs-2">
         Edit
       </div> -->
-    </div></h4>
+    </div>
 
     <% @bookings.each do | booking | %>
       <div class="col-xs-12 ls-row">
