add swag to search bar

--- a/app/assets/stylesheets/layout/_base.scss
+++ b/app/assets/stylesheets/layout/_base.scss
@@ -5,7 +5,7 @@
  * already a Bootstrap SCSS variable that does the same job
  * ------------------------------------- */
 
- .bellow-navbar {
+ .below-navbar {
    margin-top: $navbar-height + 10 * 2 ;
  }
 
