--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,4 @@
-<div class="bellow-navbar">
+<div class="below-navbar">
   <div class="container" id="show">
     <div class="row">
       <div class="col-sm-5 col-sm-offset-1">
