--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container bellow-navbar">
+<div class="container below-navbar">
   <h2 class="col-sm-6 col-sm-offset-3">Sign up</h2>
 
   <div class="row">
