--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -1,14 +1,34 @@
-<div class="bolow-navbar">
-  <div class="container padded">
-    <div class="row">
+<div class="below-navbar">
 
-      <% @products.each do |product| %>
+  <div class="col-sm-4">
+    <div id="map" style='width: 100%; height: 700px; position: fixed'></div>
+  </div>
+
+  <div class="row block-card">
+    <div class="block-info bg-white">
+      <p><%= @products.size %> found near this location</p>
+    </div>
+    <% @products.each do |product| %>
       <%= link_to(product) do %>
         <div class="col-xs-6 col-sm-4">
           <%= render "card", product: product, footer: true %>
         </div>
-     <% end %>
-     <% end %>
-    </div>
+      <% end %>
+    <% end %>
   </div>
 </div>
+
+
+ <% content_for(:after_js) do %>
+    <script type="text/javascript">
+      $(document).on('ready', function() {
+        handler = Gmaps.build('Google');
+        handler.buildMap({ internal: { id: 'map' } }, function(){
+          markers = handler.addMarkers(<%= raw @hash.to_json %>);
+          handler.bounds.extendWith(markers);
+          handler.fitMapToBounds();
+        });
+      })
+    </script>
+  <% end %>
+
