--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -4,7 +4,9 @@
       <%= f.error_notification %>
 
       <%= f.input :title %>
-      <%= f.input :address %>
+      <%= f.input :address, :input => false %>
+      <%= text_field :search, params[:search], id: "user_input_autocomplete_address",  class: "form-control", name:"product[address]", value: "#{@product.address}" %>
+      <br>
       <%= f.input :night_price %>
       <%= f.input :description %>
       <%= f.input :online, as: :radio_buttons %>
