add descritpion to info

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -32,3 +32,11 @@
  .search {
   margin-top: 100px;
  }
+
+ .text-info {
+  text-align: justify;
+  color: black;
+  padding: 15px;
+  border-radius: $border-radius-base;
+  margin-top: 30px;
+ }
