--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,6 +8,7 @@
         <div class=" bg-white presentation">
           <div class="presentation-header">
             <h2><%= @product.title %></h2>
+            <p>Owner : <%= @product.owner.email %></p>
           </div>
           <div class="presentation-body">
             <p><strong>About this housing: </strong></p>
