--- a/app/views/user_mailer/booking_rejected.html.erb
+++ b/app/views/user_mailer/booking_rejected.html.erb
@@ -1,5 +1,5 @@
 <h1>Booking rejected</h1>
 
 <p>
-  Your booking have been rejected, check it <%= link_to "here", bookings_path %>
+  Your booking have been rejected, check it <%= link_to "here", bookings_url %>
 </p>
