--- a/app/views/user_mailer/booking_accepted.html.erb
+++ b/app/views/user_mailer/booking_accepted.html.erb
@@ -1,5 +1,5 @@
-<h1>Booking accepted</h1>
+<h1>Booking Accepted</h1>
 
 <p>
-  Your booking have been accepted, check it <%= link_to "here", bookings_path %>
+  Your booking have been accepted, check it <%= link_to "here", bookings_url %>
 </p>
