--- a/app/views/user_mailer/booking_accepted.html.erb
+++ b/app/views/user_mailer/booking_accepted.html.erb
@@ -3,3 +3,9 @@
 <p>
   Your booking have been accepted, check it <%= link_to "here", bookings_url %>
 </p>
+ <br>
+  </p>
+  <p>Jean Michelle, </p>
+  <p>
+  Ceo of AirBnB
+</p>
