--- a/app/views/user_mailer/booking_for_you.html.erb
+++ b/app/views/user_mailer/booking_for_you.html.erb
@@ -3,3 +3,10 @@
 <p>
   Somebody wants to book you flat, you can see it <%= link_to "here", account_bookings_url %>
 </p>
+ <br>
+  </p>
+  <p>Jean Michelle, </p>
+  <p>
+  Ceo of AirBnB
+</p>
+
