--- a/app/views/user_mailer/booking_rejected.html.erb
+++ b/app/views/user_mailer/booking_rejected.html.erb
@@ -3,3 +3,10 @@
 <p>
   Your booking have been rejected, check it <%= link_to "here", bookings_url %>
 </p>
+ <br>
+  </p>
+  <p>Jean Michelle, </p>
+  <p>
+  Ceo of AirBnB
+</p>
+
