--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,11 +18,7 @@
       <!-- Navbar Middle Calls To Action -->
       <ul class="nav navbar-nav navbar-middle">
         <li>
-          <!-- will be deleted when search bar in V2 -->
-          <%= link_to "See Places", products_path, { class: 'btn btn-danger' } %>
-        </li>
-        <li>
-          <%= link_to "Publish an Ad", new_product_path, { class: 'btn btn-danger' } %>
+          <%= link_to "Rent a flat", new_product_path, { class: 'btn btn-danger' } %>
         </li>
       </ul>
 
