--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,15 +3,31 @@
 <div class="video-wrapper">
   <div class="content">
     <h2>Find a cheap and comfortable place to stay everywhere you travel</h2>
+
+      <!-- Search tools -->
       <div class="search">
+        <ul class='list-inline'>
         <%= form_tag search_path, method: :get do %>
-          <div class="col-sm-4 col-sm-offset-3">
-            <%= text_field_tag :search, params[:search], id: "user_input_autocomplete_address", placeholder: "Where do you want to go", class: "form-control" %>
-          </div>
-          <div class="col-xs-2">
-            <%= button_tag "Search", class: "btn btn-danger" %>
-          </div>
-        <% end %>
+          <li>
+            <div class="col-sm-3 col-sm-offset-3">
+              <%= text_field_tag :search, params[:search], id: "user_input_autocomplete_address", placeholder: "Where do you want to go", class: "form-control" %>
+            </div>
+          </li>
+
+         <li>
+            <div class="input-daterange col-sm-2" id="datepicker">
+              <%= text_field_tag :check_in, params[:check_in], placeholder: 'check-in', :class => 'input-small form-dpicker', :id => 'booking_check_in'%>
+               <%= text_field_tag :checkout, params[:checkout], placeholder: 'check-out', :class => 'input-small form-dpicker', :id => 'booking_check_out'%>
+            </div>
+          </li>
+
+          <li>
+            <div class="col-sm-1">
+              <%= button_tag "Search", class: "btn btn-danger" %>
+            </div>
+          </li>
+          <% end %>
+        </ul>
       </div>
 
   </div>
