--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,7 @@
       <!-- Navbar Middle Calls To Action -->
       <ul class="nav navbar-nav navbar-middle">
         <li>
-          <%= link_to "Rent a flat", new_product_path, { class: 'btn btn-danger' } %>
+          <%= link_to "Rent my flat", new_product_path, { class: 'btn btn-danger' } %>
         </li>
       </ul>
 
